Bug 691284 - Error: /unknownerror in --.FAPIBuildChar--
Summary: Error: /unknownerror in --.FAPIBuildChar--
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PS Interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-05 22:09 UTC by keinbiervorvier
Modified: 2010-05-06 15:30 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
ps figure which cannot be displayed with the new freetype code (82.47 KB, application/postscript)
2010-05-05 22:09 UTC, keinbiervorvier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description keinbiervorvier 2010-05-05 22:09:30 UTC
Created attachment 6259 [details]
ps figure which cannot be displayed with the new freetype code

this applies to current HEAD

the attached postscript figure fails with

Error: /unknownerror in --.FAPIBuildChar--
Operand stack:
   --nostringval--   --nostringval--   --dict:18/26(ro)(L)--   131


on the /odot characer. Previous versions of ghostscript have no problem displaying this figure.

Cheers
T.
Comment 1 Ken Sharp 2010-05-06 15:30:30 UTC
Fixed in revision 11191, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-May/010963.html

Many thanks for testing this new code!